atualizacao de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -381,7 +381,7 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="/admin/mensagem/enviar" title="enviar mensagem" class="corner-all">
+                                        <a href="/admin/mensagem/enviar-mensagem" title="enviar mensagem" class="corner-all">
                                             <i class="icon-envelope"></i>&nbsp;
                                             <span class="sidebar-text">Enviar</span>
                                         </a>
