--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -25,7 +25,7 @@
     <table class="table table-bordered table-striped" style="font-size: 13px;">
         <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
-                <th>código</th>
+                <th>Código Paciente</th>
                 <th>Nome</th>
                 <th>Nome da mãe</th>
                 <th>Data de nascimento</th>
