--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -14,14 +14,14 @@
             <li class="active"><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
 
         </ul>
-        <form class="form-horizontal" method="post">
+       
             <div class="tab-content">
-                <div id="tab1" class="tab-pane active">
+                <div id="tab1" class="tab-pane active">  <!--INICIO DA PRIMEIRA ABA-MENU-->
 
 
-                    <div id="tab1" class="tab-pane">
+                     <form class="form-horizontal" method="post">
 
-                        <!--INICIO DO PRIMEIRO FORM-->
+                       
 
                         <div class="rows-fluid">
                             <div class="span6">
@@ -76,12 +76,12 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> <!--FIM DO PRIMEIRO MENU-->
-                    </div>
+                        </div> 
+                    
 
 
                     </form>
-                </div>
+                </div> <!--FIM DA PRIMEIRA ABA-MENU-->
             </div>
     </div>
 </fieldset>
