Correção de tag html

--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -35,7 +35,7 @@
             <?php foreach ($this->listFuncionarios as $funcionarios): ?>
                 <tr>
                     <td><?php echo $funcionarios->cod_pessoa ?></td>
-                    <td><?php echo $funcionarios->nome ?></td>
+                    <td><?php echo $funcionarios->nome_login ?></td>
                     <td><?php echo $funcionarios->nome ?></td>
                     <td><?php echo $funcionarios->matricula ?></td>
                     <td><?php echo $funcionarios->cod_status == 1 ? 'Ativo' : 'Inativo' ?></td>
